--- a/I-PARCIAL.ipynb
+++ b/I-PARCIAL.ipynb
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d7cc76c0",
+   "id": "057f788b",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6ab19a00",
+   "id": "9b97296b",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "cfd47306",
+   "id": "3f70bb2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "04f0a8e8",
+   "id": "09639e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bd1815e5",
+   "id": "45076d4a",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "52361529",
+   "id": "b4ab2649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8e2d4ad5",
+   "id": "a7ad8505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f9a296ae",
+   "id": "38cf03d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "54dfab7e",
+   "id": "4995b42d",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6ba09161",
+   "id": "d54f1e6b",
    "metadata": {},
    "outputs": [
     {
@@ -1092,19 +1092,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "b6d7ab8e",
+   "execution_count": 68,
+   "id": "f1b7cf96",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import plot_confusion_matrix\n",
-    "from sklearn.metrics import accuracy_score, recall_score, f1_score, precision_score"
+    "from sklearn.metrics import accuracy_score, recall_score, f1_score, precision_score\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split, KFold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d561c559",
+   "id": "99bcd0a8",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "41145034",
+   "id": "e3119e72",
    "metadata": {},
    "outputs": [
     {
@@ -1162,20 +1164,66 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "87cdebba",
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "18641bb8",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Carlos Andres Mendoza Martinez - T00055203"
+    "Models = [('LR', LogisticRegression()),'RF', RandomForestClassifier(),'GB',GradientBoostingClassifier()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83618697",
+   "execution_count": 80,
+   "id": "8391c6b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "resultados = []\n",
+    "labels = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "f2a5817c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR: 0.751152 std:(0.066831)\n",
+      "GB: 0.723041 std:(0.101293)\n",
+      "RF: 0.764900 std:(0.069595)\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = [('LR', LogisticRegression()),\n",
+    "          ('GB',GradientBoostingClassifier()),\n",
+    "          ('RF', RandomForestClassifier())\n",
+    "          ]\n",
+    "results = []\n",
+    "labels = []\n",
+    "\n",
+    "for label, model in models:\n",
+    "    kfold = KFold(n_splits=14)\n",
+    "    cv_results = cross_val_score(model, X_train, y_train, cv=kfold, scoring=\"accuracy\")\n",
+    "    results.append(cv_results)\n",
+    "    labels.append(label)\n",
+    "    msg = \"%s: %f std:(%f)\" % (label, cv_results.mean(), cv_results.std())\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59d10d66",
+   "metadata": {},
+   "source": [
+    "# Carlos Andres Mendoza Martinez - T00055203"
+   ]
   }
  ],
  "metadata": {
